# PyTopo3D

./: .gitignore  LICENSE  README.md  environment.yml  main.py  material_presets.yml  setup.py
build-tools/: MANIFEST.in  README.md  pyproject.toml  setup.py
config/: force_fields.yml  material_presets.yml  output_displacement_ranges.yml  protected_zone_ranges.yml  research_comparison_protocol.example.yml  support_masks.yml
examples/: obstacles_config_cylinder.json
pytopo3d.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pytopo3d/analysis/: __init__.py  failure.py  failure_aggregation.py  failure_sensitivity.py  postprocessing.py  stress.py
pytopo3d/cli/: __init__.py  command.py  parser.py
pytopo3d/core/: compliance.py  optimizer.py
pytopo3d/preprocessing/: __init__.py  geometry.py
pytopo3d/runners/: __init__.py  experiment.py  pipeline.py  research_comparison.py
scripts/: run_cantilever_test.bat  run_debug_tensile_test_fill_20x20x100.bat  run_debug_test_50x50x2.bat  run_debug_test_75x75x1.bat  run_for_animation.sh  run_sheet_hole_stl_test.bat  run_small.sh  run_tensile_test.bat  run_with_obstacles.sh  run_with_obstacles_small.sh  run_with_stl_export.sh
tests/: test_export_projection.py  test_failure.py  test_failure_aggregation.py  test_failure_continuation.py  test_failure_optimizer.py  test_failure_postprocessing.py  test_failure_relaxation.py  test_failure_sensitivity.py  test_material_strength.py  test_mma_update.py  test_projected_optimizer.py  test_projection.py  test_research_comparison.py  test_stiffness.py  test_stress.py  test_stress_rotation.py
(+23 files in other folders)
